--- a/package.json
+++ b/package.json
@@ -7,11 +7,29 @@
     "author": "X.Y.Z.",
     "license": "MIT",
     "scripts": {
-        "watch": "tsc --watch"
+        "watch": "tsc --watch",
+        "build": "tsc",
+        "cz": "git-cz",
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
     },
     "dependencies": {},
     "devDependencies": {
+        "commitizen": "^4.2.1",
+        "conventional-changelog-cli": "^2.1.0",
+        "cz-conventional-changelog": "3.3.0",
+        "git-cz": "^4.7.1",
         "jest": "^26.5.2",
         "typescript": "^4.0.3"
-    }
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "files": [
+        "dist",
+        "src",
+        "LICENSE",
+        "README.md"
+    ]
 }
