--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
         "lib": [
             "ES5",
             "DOM",
+            "ES2015.Core",
+            "ES2015.Collection",
+            "ES2015.Promise",
+            "ES2020.BigInt"
         ],                             /* Specify library files to be included in the compilation. */
         // "allowJs": true,                       /* Allow javascript files to be compiled. */
         // "checkJs": true,                       /* Report errors in .js files. */
